<resources>

    <!-- General -->
    <string name="app_name">BTC Dashboard</string>
    <string name="banner_img_content_description">Bitcoin logo on dark blue background</string>
    <!-- A warning suggested a content description for some handicap accessibility features -->

    <!-- List Fragment -->
    <string-array name="main_menu_items">
        <item>Current Exchange Rate Ticker</item>
        <item>Value Charts</item>
        <item>View Wallet Balance</item>
    </string-array>

    <!-- Shared -->
    <string name="load_button">Load</string>
    <string name="refresh_button">Refresh</string>
    <string name="create_button">Create</string>
    <string name="previous_button">Previous Block</string>
    <string name="next_button">Next Block</string>

    <!-- Wallet Fragment -->
    <string name="wallet_button">View Wallet Data</string>
    <string name="wallet_view_button">View</string>
    <string name="wallet_api_url" translatable="false">http://btc.blockr.io/api/v1/address/info/%1$s</string>
    <string name="long_click_desc">Long-press a saved address to remove.</string>

    <!-- Ticker Fragment -->
    <string name="current_value_text">Current Market Value</string>
    <string name="coins_total_label">Coins Mined So Far</string>
    <string name="ticker_footer1">Price Last Updated at %1$s.</string>
    <string name="ticker_footer2">Data Last Refreshed at %1$s </string>
    <string name="ticker_footer_sources">via blockr.io API and BTC-e trade data</string>
    <string name="ticker_api_url" translatable="false">http://btc.blockr.io/api/v1/exchangerate/current</string>
    <string-array name="currencies">
        <item name="usd">USD</item>
        <item name="eur">EUR</item>
        <item name="jpy">JPY</item>
        <item name="gbp">GBP</item>
    </string-array>


    <!-- Chart Fragment -->
    <string name="chart_description">Select a time frame to view Bitcoin\'s value change</string>
    <string name="radio_button_1d">1 Day</string>
    <string name="radio_button_5d">5 Days</string>
    <string name="chart_timer_text">Auto update in %1$s</string>
    <string name="chart_url_1d" translatable="false">https://chart.yahoo.com/z?s=BTCUSD=X&amp;t=1d</string>
    <string name="chart_url_5d" translatable="false">https://chart.yahoo.com/z?s=BTCUSD=X&amp;t=5d</string>

    <!-- Block Fragment -->
    <string name="blockchain_description">View information about specific block:</string>
    <string name="blockchain_entry_description">Enter a block number to view:</string>

    <!-- Junk -->
    <string name="menu_title">Details</string>

</resources>

<!-- todo add spanish -->